--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
   </head>
   <body>
     <canvas id="canvas" height="150" width="150"></canvas>
+    <div class="floating-button-container">
+      <button id="refresh">Regenerate Map</button>
+      <button id="download">Download</button>
+    </div>
   </body>
 </html>
